[project]
name = "export-stars"
version = "0.1.0"
description = "Export a GitHub user's starred repositories to CSV"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyGithub>=2.0.0",
    "urllib3>=2.0.0",
]

[project.scripts]
export-stars = "export_stars:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"